[package]
name = "gi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = {version = "0.6.3", default-features = false}
dialoguer = "0.11.0"
eyre = "0.6.12"
octocrab = "0.38.0"
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
strum = "0.26.2"
strum_macros = "0.26.2"
tokio = { version = "1.37.0", features = ["full"] }
which = "6.0.1"
